--- a/Python_YouTubeMulti_Download.ipynb
+++ b/Python_YouTubeMulti_Download.ipynb
@@ -3,34 +3,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44b3c054",
+   "id": "e4f62ec5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import yt_dlp\n",
     "\n",
-    "def downloadPlaylist(playlist_url):\n",
-    "    # Save the playlist in the same directory\n",
-    "    folderPath = os.path.dirname(os.path.abspath(__file__))\n",
+    "# Save the playlist in the same directory\n",
+    "folderPath = os.getcwd()   \n",
     "\n",
+    "def downloadPlaylist(playlist_url):\n",
     "    ydl_opts = {\n",
     "        'outtmpl': os.path.join(folderPath, '%(playlist_index)s - %(title)s.%(ext)s'),\n",
-    "        'format': 'bestvideo+bestaudio/best',    \n",
-    "        'merge_output_format': 'mp4',           # ffmpeg --> must download first\n",
-    "        'noplaylist': False                      \n",
+    "        'format': 'bestvideo+bestaudio/best',  # ffmpeg --> must download first\n",
+    "        'merge_output_format': 'mp4',\n",
+    "        'noplaylist': False\n",
     "    }\n",
-    "\n",
     "    with yt_dlp.YoutubeDL(ydl_opts) as ydl:\n",
     "        ydl.download([playlist_url])\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    print(\"\\t\\t Youtube Playlist Downloader (yt-dlp + ffmpeg)\")\n",
-    "    print(\"\\t\\t----------------------------------------------\\n\\n\")\n",
-    "\n",
-    "    playlist_url = input(\"Enter Youtube Playlist URL: \")\n",
-    "    downloadPlaylist(playlist_url)\n",
-    "    print(\"\\n[+] Download completed successfully!\")\n"
+    "playlist_url = input(\"Enter Youtube Playlist URL: \")\n",
+    "downloadPlaylist(playlist_url)\n",
+    "print(\"\\n[+] Download completed successfully!\")\n"
    ]
   }
  ],
